[project]
name = 'RasPiAPRS'
version = '0.1b10'
description = 'APRS telemetry for Pi-Star/WPSD/AllStarLink/DVSwitch'
keywords = ['amateur-radio', 'aprs', 'aprs-beacon', 'aprs-telemetry', 'aprs-messaging', 'mmdvm', 'pi-star', 'wpsd', 'allstarlink', 'dvswitch']
readme = 'README.md'
license = 'GPL-3.0-or-later'
license-files = ['LICENSE']
authors = [
  { name = 'Fred Cirera', email = 'github-fred@hidzz.com' },
  { name = 'Hafizi Ruslan', email = '9w2lgx@mhrtech.my' },
]
maintainers = [{ name = 'Hafizi Ruslan', email = '9w2lgx@mhrtech.my' }]
classifiers = [
  'Development Status :: 4 - Beta',
  'Intended Audience :: Other Audience',
  'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)',
  'Natural Language :: English',
  'Natural Language :: Malay',
  'Operating System :: POSIX :: Linux',
  'Programming Language :: Python :: 3.13',
  'Programming Language :: Python :: 3.14',
  'Programming Language :: Python :: 3.15',
  'Topic :: Communications :: Ham Radio',
]
urls.github = 'https://git.new/RasPiAPRS'
urls.repository = 'https://github.com/HafiziRuslan/RasPiAPRS.git'
urls.sourcecode = 'https://github.com/0x9900/aprstar.git'
urls.history = 'https://github.com/HafiziRuslan/RasPiAPRS/blob/master/CHANGELOG.md'
urls.issuetracker = 'https://github.com/HafiziRuslan/RasPiAPRS/issues'
requires-python = '>=3.13'
dependencies = [
  'aiohttp>=3.13.4',
  'aprslib>=0.7.2',
  'callsign-regex>=0.7.1',
  'geopy>=2.4.1',
  'gpsdclient>=1.3.2',
  'humanize>=4.15.0',
  'psutil>=7.2.2',
  'python-dotenv>=1.2.2',
  'python-telegram-bot>=22.7',
]

[tool.ruff]
line-length = 150
analyze.detect-string-imports = true
format.quote-style = 'single'
format.indent-style = 'tab'
format.docstring-code-format = true
format.line-ending = 'lf'
format.skip-magic-trailing-comma = true
lint.isort.combine-as-imports = true
lint.isort.default-section = 'first-party'
lint.isort.force-single-line = true
